Fix overflowing timestamp

--- a/ui/src/design-system/components/capture-list/capture-row/capture-row.module.scss
+++ b/ui/src/design-system/components/capture-list/capture-row/capture-row.module.scss
@@ -4,7 +4,7 @@
 .capture {
   width: 100%;
   display: grid;
-  grid-template-columns: 2fr 2fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   align-items: center;
   justify-content: flex-start;
   gap: 16px;
@@ -22,6 +22,10 @@
     min-width: 9px;
     border-radius: 4px;
     background-color: $color-success-300;
+  }
+
+  .timestamp {
+    text-align: right;
   }
 
   &:hover {
